--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -10,26 +10,28 @@
   </head>
   <body>
     <h1 class="title">Lista de PDFs</h1>
-    <hr>
-     <a class="l1" href="../pdf/logica.pdf">Lógica de programação</a>
-     <a class="l2" href="../pdf/informatica_redes_de_computadores_2019.pdf">Redes de computadores-EEEP</a>
-     <a class="l3" href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a>
-     <a class="l4" href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a>
-     <a class="l5" href="../pdf/apostila-html-css-javascript.pdf">Estruturação de páginas usando HTML e CSS</a>
-     <a class="l6" href="../pdf/Assembly.pdf">Programando em Assembly</a>
-     <a class="l7" href="../pdf/AsmNasm.pdf">Assembly na prática</a>
-     <a class="l8" href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a>
-     <a class="l9" href="../pdf/progcbasic.pdf">Programação Básica em C</a>
-    <a class="l2a" href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a>
-    <a class="l3a" href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a>
-    <a class="l4a" href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a>
-    <a class="l5a" href="../pdf/Comandos_para_configuracao_de_Switch.pdf">Comandos para configuração de switch (CISCO)</a>
-    <a class="l6a" href="../pdf/TROUBLESHOOTING.pdf">Troubleshooting de Redes</a>
-    <a class="l7a" href="../pdf/Comandos_para_configurar_roteadores.pdf">Comandos para configurar roteadores (CISCO)</a>
-    <a class="l8a" href="../pdf/A Arte De Enganar - Kevin D. Mitnick.pdf">A Arte De Enganar - Kevin D. Mitnick</a>
-    <a class="l9a" href="../pdf/linuxbasicsforhackers.pdf">Linux Basics for Hackers</a>
-    <a class="l1b" href="../pdf/aartedeabrircadeados.pdf">A Arte de Abrir Cadeados</a>
-    <a class="l2b" href="../pdf/phishing.pdf">Manual do 7 (esqueça!!!)</a>
-    <hr>
+    <div class="content">
+      <fieldset>
+     <a href="../pdf/logica.pdf">Lógica de programação</a>
+     <a href="../pdf/informatica_redes_de_computadores_2019.pdf">Redes de computadores-EEEP</a>
+     <a href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a>
+     <a href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a>
+     <a href="../pdf/apostila-html-css-javascript.pdf">Estruturação de páginas usando HTML e CSS</a>
+     <a href="../pdf/Assembly.pdf">Programando em Assembly</a>
+     <a href="../pdf/AsmNasm.pdf">Assembly na prática</a>
+     <a href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a>
+     <a href="../pdf/progcbasic.pdf">Programação Básica em C</a>
+    <a  href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a>
+    <a  href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a>
+    <a  href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a>
+    <a  href="../pdf/Comandos_para_configuracao_de_Switch.pdf">Comandos para configuração de switch (CISCO)</a>
+    <a  href="../pdf/TROUBLESHOOTING.pdf">Troubleshooting de Redes</a>
+    <a  href="../pdf/Comandos_para_configurar_roteadores.pdf">Comandos para configurar roteadores (CISCO)</a>
+    <a  href="../pdf/A Arte De Enganar - Kevin D. Mitnick.pdf">A Arte De Enganar - Kevin D. Mitnick</a>
+    <a  href="../pdf/linuxbasicsforhackers.pdf">Linux Basics for Hackers</a>
+    <a  href="../pdf/aartedeabrircadeados.pdf">A Arte de Abrir Cadeados</a>
+    <a  href="../pdf/phishing.pdf">Manual do 7 (esqueça!!!)</a>
+    </fieldset>
+    </div>
   </body>
 </html>
