--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -12,26 +12,28 @@
     <h1 class="title">Lista de PDFs</h1>
     <div class="content">
       <fieldset>
-     <a href="../pdf/logica.pdf">Lógica de programação</a>
-     <a href="../pdf/informatica_redes_de_computadores_2019.pdf">Redes de computadores-EEEP</a>
-     <a href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a>
-     <a href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a>
-     <a href="../pdf/apostila-html-css-javascript.pdf">Estruturação de páginas usando HTML e CSS</a>
-     <a href="../pdf/Assembly.pdf">Programando em Assembly</a>
-     <a href="../pdf/AsmNasm.pdf">Assembly na prática</a>
-     <a href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a>
-     <a href="../pdf/progcbasic.pdf">Programação Básica em C</a>
-    <a  href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a>
-    <a  href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a>
-    <a  href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a>
-    <a  href="../pdf/Comandos_para_configuracao_de_Switch.pdf">Comandos para configuração de switch (CISCO)</a>
-    <a  href="../pdf/TROUBLESHOOTING.pdf">Troubleshooting de Redes</a>
-    <a  href="../pdf/Comandos_para_configurar_roteadores.pdf">Comandos para configurar roteadores (CISCO)</a>
-    <a  href="../pdf/A Arte De Enganar - Kevin D. Mitnick.pdf">A Arte De Enganar - Kevin D. Mitnick</a>
-    <a  href="../pdf/linuxbasicsforhackers.pdf">Linux Basics for Hackers</a>
-    <a  href="../pdf/aartedeabrircadeados.pdf">A Arte de Abrir Cadeados</a>
-    <a  href="../pdf/phishing.pdf">Manual do 7 (esqueça!!!)</a>
-    </fieldset>
+        <ul>
+          <li><a href="../pdf/logica.pdf">Lógica de programação</a></li>
+          <li><a href="../pdf/informatica_redes_de_computadores_2019.pdf">Redes de computadores-EEEP</a></li>
+          <li><a href="../pdf/MD_RedesdeComputadores.pdf">Redes de computadores-UFSM</a></li>
+          <li><a href="../pdf/manut_mont_comp.pdf">Manutenção e montagem de computadores</a></li>
+          <li><a href="../pdf/apostila-html-css-javascript.pdf">Estruturação de páginas usando HTML e CSS</a></li>
+          <li><a href="../pdf/Assembly.pdf">Programando em Assembly</a></li>
+          <li><a href="../pdf/AsmNasm.pdf">Assembly na prática</a></li>
+          <li><a href="../pdf/Assembly x86 NASM.pdf">Assembly x86</a></li>
+          <li><a href="../pdf/progcbasic.pdf">Programação Básica em C</a></li>
+          <li><a href="../pdf/1429885481_ARQUIVO_nadsat.pdf">Nadsat</a></li>
+          <li><a href="../pdf/minna_no_nihongo.pdf">Minna No Nihonhgo</a></li>
+          <li><a href="..//pdf/vim_basico.pdf">Comandos Basicos VIm</a></li>
+          <li><a href="../pdf/Comandos_para_configuracao_de_Switch.pdf">Comandos para configuração de switch (CISCO)</a></li>
+          <li><a href="../pdf/TROUBLESHOOTING.pdf">Troubleshooting de Redes</a></li>
+          <li><a href="../pdf/Comandos_para_configurar_roteadores.pdf">Comandos para configurar roteadores (CISCO)</a></li>
+          <li><a href="../pdf/A Arte De Enganar - Kevin D. Mitnick.pdf">A Arte De Enganar - Kevin D. Mitnick</a></li>
+          <li><a href="../pdf/linuxbasicsforhackers.pdf">Linux Basics for Hackers</a></li>
+          <li><a href="../pdf/aartedeabrircadeados.pdf">A Arte de Abrir Cadeados</a></li>
+          <li><a href="../pdf/phishing.pdf">Manual do 7 (esqueça!!!)</a></li>
+        </ul>
+      </fieldset>
     </div>
   </body>
 </html>
