--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -36,6 +36,7 @@
           <li><a href="https://ia802308.us.archive.org/14/items/eterna_vigilancia/as_48_leis_do_poder.pdf">As 48 leis do poder</a></li>
           <li><a href="https://ia800702.us.archive.org/18/items/sem_lugar_EDSN/sem_lugar_EDSN.pdf">Sem Lugar Para Se Esconder</a></li>
           <li><a href="https://ia902308.us.archive.org/14/items/eterna_vigilancia/simulacros_e_simula%C3%A7%C3%A3o.pdf">Simulacros e Simulação</a></li>
+          <li><a href="../pdf/shellscript.pdf">Shell Script do Zero</a></li>
           <li><a href="https://ia902308.us.archive.org/14/items/eterna_vigilancia/OSINT%20Techniques_%20Resources%20for%20Uncovering%20Online%20--%20Michael%20Bazzell%20--%2010%2C%202023%20--%20Michael%20Bazzell%20--%209780578315294%20--%2014597c8090f6d0eed2f9d8d2480f0b24%20--%20Anna%E2%80%99s%20Archive.pdf">OSINT Techniques_ Resources for Uncovering Online</a></li>
         </ul>
       </fieldset>
