--- a/subpages/pdfs.html
+++ b/subpages/pdfs.html
@@ -38,7 +38,7 @@
           <li><a href="https://ia902308.us.archive.org/14/items/eterna_vigilancia/simulacros_e_simula%C3%A7%C3%A3o.pdf">Simulacros e Simulação</a></li>
           <li><a href="../pdf/shellscript.pdf">Shell Script do Zero</a></li>
           <li><a href="https://ia902308.us.archive.org/14/items/eterna_vigilancia/OSINT%20Techniques_%20Resources%20for%20Uncovering%20Online%20--%20Michael%20Bazzell%20--%2010%2C%202023%20--%20Michael%20Bazzell%20--%209780578315294%20--%2014597c8090f6d0eed2f9d8d2480f0b24%20--%20Anna%E2%80%99s%20Archive.pdf">OSINT Techniques_ Resources for Uncovering Online</a></li>
-          <li><a href="../pdf/hacking_theart.pdf">Hacking The Art of Exploitation</a></li>
+          <li><a href="../pdf/Hacking_ The Art of Exploitation -- Jon Erickson -- 2, 2008 -- No Starch Press -- 9781593271442 -- 9621f36b1d43d3aaef37504267218039 -- Anna’s Archive.pdf">Hacking The Art of Exploitation</a></li>
           <li><a href="../pdf/Os arquivos Snowden_ a história secreta do homem mais -- Luke Harding -- 2014 -- LEYA BRASIL -- 9788580449761 -- 0537c9c646ef530efb2bb0347280ebcf -- Anna’s Archive.pdf">Os Arquivos Snowden</a></li>
           <li><a href="../pdf/O príncipe -- Nicolau Maquiavel -- 2010 -- Editora Companhia das Letras -- 8b14e13bbaeacaac906e62a3f8e94b19 -- Anna’s Archive.pdf">O Príncipe</a></li>
         </ul>
